# ArthroScape

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  profile.prof  pyproject.toml
.github/workflows/: gh-pages.yml
analysis/: test.ipynb
api/: index.html
api/sim/arena/: index.html
api/sim/behavior/: index.html
api/sim/config/: index.html
api/sim/directional_persistence/: index.html
api/sim/odor_perception/: index.html
api/sim/odor_release/: index.html
api/sim/odor_sources/: index.html
api/sim/runner/: index.html
api/sim/saver/: index.html
api/sim/simulator/: index.html
api/sim/visualization/: index.html
architecture/: index.html
arthroscape/: __init__.py  rdp_client.py
arthroscape/sim/: __init__.py  arena.py  behavior.py  config.py  directional_persistence.py  main.py  odor_perception.py  odor_release.py  odor_sources.py  runner.py  saver.py  simulator.py  visualization.py  visualizer.py
docs/: architecture.md  index.md  installation.md  usage.md
docs/api/: index.md  rdp_client.md
docs/api/sim/: arena.md  behavior.md  config.md  odor_perception.md  (+7 more)
docs/how-to/: data_analysis.md  external_odor_sources.md  parallel_simulations.md  visualization.md
docs/tutorials/: custom_arena.md  custom_behavior.md  getting_started.md
how-to/data_analysis/: index.html
how-to/external_odor_sources/: index.html
how-to/parallel_simulations/: index.html
how-to/visualization/: index.html
installation/: index.html
scripts/: analysis_ui.py  run_simulation.py
search/: search_index.json
tests/: test_diffusion.py  test_exhaustive_plus.py  test_simulation.py
tutorials/custom_arena/: index.html
tutorials/custom_behavior/: index.html
tutorials/getting_started/: index.html
usage/: index.html
