[tool.poetry]
name = "arthroscape"
version = "0.1.0"
description = ""
authors = ["Rishika Mohanta <neurorishika@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^2.1.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
ipython = "^8.14.0"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
argparse = "^1.4.0"
mkinit = "^1.0.0"
cryptography = "^41.0.2"
lazy-loader = "^0.3"
split-file-reader = "^0.1.4"
joblib = "^1.3.1"
tqdm = "^4.65.0"
numba = "^0.61.0"
pytest = "^8.3.5"
h5py = "^3.13.0"
opencv-python = "^4.11.0.86"
line-profiler = "^4.2.0"
ffmpeg-python = "^0.2.0"
scikit-guess = "^0.0.1a0"
statsmodels = "^0.14.4"
seaborn = "^0.13.2"
dabest = "^2025.3.27"
circle-fit = "^0.2.1"

[tool.poetry.group.dev.dependencies]
snakeviz = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
